# AI-aggregation-Platform

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  README_REFACTOR.md  create_admin.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 231426f7af84_add_is_admin_to_users.py  45faae3cd346_initial_migration.py  8ecc365fdb32_add_must_change_password.py  a7286b3d21b2_refactor_to_api_key_based.py
app/: __init__.py  main.py
app/adapters/: __init__.py  ai_openai.py  aliyuncs.py  base.py  deepseek.py  doubao.py  model_registry.py  openai.py  siliconflow.py
app/admin/: router.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  api_keys.py  auth.py  chat.py  statistics.py  users.py
app/core/: __init__.py  config.py  database.py  enums.py  logger.py  logging.py  security.py
app/crud/: __init__.py  api_key.py  base.py  conversation.py  usage_log.py  user.py
app/models/: __init__.py  api_key.py  base.py  conversation.py  message.py  usage_log.py  user.py
app/plugins/: __init__.py
app/plugins/day_news/: __init__.py  router.py  service.py
app/schemas/: __init__.py  api_key.py  auth.py  chat.py  news.py  response.py  user.py
app/services/: chat_service.py
app/templates/: admin.html
test/: sflow-conect.py
