[project]
name = "ai-aggregation-platform"
version = "0.1.0"
description = "AI Web API with FastAPI"
authors = [
    {name = "Martin",email = "1957074599@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# 目标 Python 版本
target-version = "py313"

# 每行最大字符数
line-length = 88

# 排除的目录
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]

# 忽略的规则
ignore = [
    "E501",    # 行太长（由 formatter 处理）
    "PLR0913", # 函数参数过多
    "PLR2004", # 魔法数字
    "TRY003",  # 在 raise 中避免指定长消息
    "EM101",   # 异常消息中的字符串字面量
    "EM102",   # 异常消息中的 f-string
]

# 每个文件允许的自动修复规则
fixable = ["ALL"]
unfixable = []

# 允许未使用的变量（以下划线开头）
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# 测试文件可以使用断言和相对导入
"tests/**/*.py" = [
    "S101",   # 允许使用 assert
    "ARG",    # 允许未使用的函数参数
    "PLR2004", # 允许魔法数字
]
# __init__.py 可以有未使用的导入
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# isort 配置
known-first-party = ["AI"]  # 替换为你的包名
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
# McCabe 复杂度限制
max-complexity = 10

[tool.ruff.lint.pydocstyle]
# 文档字符串风格
convention = "google"  # 可选: "google", "numpy", "pep257"

[tool.ruff.lint.pylint]
# Pylint 特定配置
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
# 代码格式化配置
quote-style = "double"           # 使用双引号
indent-style = "space"           # 使用空格缩进
line-ending = "auto"             # 自动检测行尾
skip-magic-trailing-comma = false
docstring-code-format = true     # 格式化文档字符串中的代码示例
docstring-code-line-length = 60  # 文档字符串代码行长度
