[project]
name = "ai-aggregation-platform"
version = "0.1.0"
description = "AI Aggregation Platform"
authors = [
    {name = "Martin", email = "1957074599@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

